# project-smartAPPesprit

./: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  project_1.glade.bak  project_1.gladep.bak
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  ajout_etudiant.txt  alarme.txt  callbacks.c  callbacks.h  capteur.c  capteur.h  capteur.txt  capteurtempo.txt  fonction.c  fonction.h  fonction1.c  fonction1.h  haha.txt  hebergement.c  hebergement.h  hebergement.txt  interface.c  interface.c.bak  interface.h.bak  main.c  project_1  rech.txt  reclamation.txt  repas.c  repas.h  repas.txt  test.txt
src/.deps/: callbacks.Po  fonction.Po  fonction1.Po  repas.Po
